# auto-ingest

./: .env  .env-ssd  .env.example  .gitignore  01_precompute_music_segments.py  02_classify_lyrics.py  AGENCY_SETUP.md  CRITICAL_GAP_ANALYSIS_2026-07-ike.md  Dockerfile  Dockerfile.birdcam  HLD.md  KG_INGEST_DEPLOY.md  KNOWLEDGE_MAP_SUMMARY.md  LLD.md  PhoneLog.cy  README.md  SKILL.md  UNIFICATION.md  VIDEO_AUTOMATION_MIGRATION_PLAN.md  add_audio.sh  aliases.auto-ingest  arxiv_topics.txt  audio_copy.sh  auto.py  auto_ingest_config.py  batch_diaratize_final.py  batch_diarize.py  batch_diarize_with_db.py  batch_update_paths.py  bodycam_copy.sh  build_summaries_ollama.py  build_summaries_ollama_a.py  bulk_ingest_dashcam.py  bulk_ingest_dashcam.sh  check_speakers.py  cluster.py  cluster_final.py  cluster_points.py  collect_metadata.sh  compare_transcripts.py  (+119 more)
archive/: README.md  autogen_coder_team_legacy.py
auto_ingest/: __init__.py  _config.py  backend.py  events.py  fleet_batch.py  ingest_claim.py  ingest_import.py  ingest_write.py  knowledge_map.py  outbox.py  speaker_health.py
birdcam/: README.md  api.py  cli.py  config.py  db.py  events.py  models.py  recorder.py  retention.py  storage.py  stream.py  worker.py
content_os/: __init__.py  __main__.py  adapters.py  cli.py  core.py  io.py  models.py
deploy/: create_job.sh  fix-s-drive-mount.sh  job_trigger_api.py  manage.sh  path_profiles.env.example  start-cron.sh  sync_from_legacy_drop.sh  worker_ingest.sh
docs/: DEEP_DIVE_2026-07-14.md  GAP_ANALYSIS_2026-07-17.md  OFFLINE_SWARM_INTEGRATION_PLAN.md  PLAN_distributed_ingest.md  PLAN_orchestration.md  PLAN_personal_recall.md  PROPOSED_RUN_CLI.md  SPEAKER_ANCHOR_DESIGN.md  VAULT_SYNC.md  architecture.md  birdcam_deployment_guide.md  current-ingest-state-2026-06-10.md  deathstar-cli-storage-migration.md  deployment_runbook.md  fleet-onboarding-report.md  publish_schedule.json  publish_strategy.md  recovery-plan-2026-06-10.md  system_design.md
examples/: emit_verbatim_task.py  no_llm_workflow.md
plans_narrated/: diffusion_models__fd552f4f4a61.json  discussion_diffusion_models__11.json  discussion_diffusion_models__23.json  discussion_diffusion_models__7.json  discussion_graph_neural_networks__11.json  discussion_graph_neural_networks__23.json  discussion_graph_neural_networks__7.json  discussion_reinforcement_learning__7.json  graph_neural_networks__057d142f98eb.json  highlights__11.json  highlights__12ce5c87c72c.json  highlights__23.json  highlights__601326d6e2e5.json  highlights__7.json  highlights__7c17c885d907.json  highlights__7f1801ca9de5.json  highlights__a694b6512637.json  highlights__c027317111ab.json  large_language_models__0964ec9f9c61.json  large_language_models__6138024dee97.json  large_language_models__68153a019cb9.json  large_language_models__a0f8b5e7ee02.json  large_language_models__ea8c2a8fda7a.json  montage__0e97fd6d087d.json  montage__11.json  montage__23.json  montage__5f3d1993123f.json  montage__7.json  montage__bcc2b4300f8c.json  montage__c03bbc7ba636.json  montage__f2e6cb3e0e82.json  montage__fbc398a8824c.json  trip__11.json  trip__23.json  trip__7.json  trip_story__441821d0fe6f.json
quality_api/: __init__.py  app.py  config.py  embeddings.py  neo4j_client.py  wsgi.py
scripts/: .arxiv_kg_cursor.json  .kg_health_state.json  _smoke_render_shorts.py  agent-health-check.sh  agent_health_check.py  anchor_speaker_me.py  arxiv_kg_bridge.py  backfill_audio_day.sh  backfill_paper_768.py  backfill_paper_similar.py  backfill_segment_clip_key.py  bridge_paper_concept_768.py  check_anchor_health.py  check_neo4j.py  check_schema.py  check_sophia.py  claim_job.py  curious_agent.py  delegate_to_agent.py  enrich_bridge_semantic.py  enrich_bridge_to_concepts.py  enrich_cluster_place.py  enrich_cluster_place_full.py  enrich_docs_to_concepts.py  enrich_infer_context_role.py  enrich_merge_super_clusters.py  enrich_phonelog_place.py  enrich_phonelog_travel.py  enrich_pipeline.py  enrich_scott_unify.py  enrich_summary_geo.py  extract_mentions.py  kg_nl_query.py  (+28 more)
(+113 files in other folders)
