[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "content-os"
version = "0.1.0"
description = "Local-first, approval-gated content operating system CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
full = ["pydantic>=2.6", "PyYAML>=6.0"]
dev = ["pytest>=8.0"]

[project.scripts]
content-os = "content_os.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
